updated skills, description and contact info, removed unnecessary information

--- a/index.html
+++ b/index.html
@@ -102,33 +102,53 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Diana Marusic</span></p>
-                      <p><span class="title-s">Profile: </span> <span>ML/AI Engineer, Web Developer, Visionary</span></p>
-                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                      <!-- <p><span class="title-s">Profile: </span> <span>ML/AI Engineer, Web Developer, Visionary</span></p> -->
+                      <p><span class="title-s">Email: </span> <span>marusicdiana@gmail.com</span></p>
+                      <p><span class="title-s">LinkedIn: </span> <span><a href="https://www.linkedin.com/in/diana-marusic-207678305/">https://www.linkedin.com/in/diana-marusic-207678305/</a></span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <p class="title-s">Skills</p>
+                  <span>Machine Learning</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <span>Artificial Intelligence</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <span>Deep Learning</span> <span class="pull-right">70%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <span>Data Analysis</span> <span class="pull-right">70%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span>Computer Vision</span> <span class="pull-right">60%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span>NLP</span> <span class="pull-right">75%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span>LLMs</span> <span class="pull-right">80%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span>Web Development</span> <span class="pull-right">85%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span>Project Management</span> <span class="pull-right">50%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <span>Public Speaking / Storytelling</span> <span class="pull-right">85%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
               </div>
@@ -140,21 +160,15 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
+                    ML Engineer. Making the world a better place through applying technologies for a positive impact.
                   </p>
                   <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                    I am passionate about using technology to create a better world, specializing in developing innovative AI solutions that tackle real-world challenges. Guided by strong personal values and a deep enthusiasm for my work, I prioritize continuous improvement and effective communication.
                   </p>
                   <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                    Grounded in a belief that technology should serve humanity with integrity and foresight, I am dedicated to shaping a future where AI not only advances technological frontiers but also improve people's lives and our planet's well-being. I thrive in dynamic environments where innovation meets social responsibility, driving forward initiatives that embody both technical excellence and leadership.
                   </p>
+                  
                 </div>
               </div>
             </div>
@@ -164,8 +178,10 @@
     </div>
   </section>
 
-  <!--/ Section Services Star /-->
-  <section id="service" class="services-mf route">
+
+
+  <!--/ TODO: Section Services Star /-->
+  <!-- <section id="service" class="services-mf route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -273,9 +289,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Section Services End /-->
 
+  <!-- Section about projects, awards etc - looks nice, should add TODO -->
+<!-- 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -326,10 +344,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
 
   <!--/ Section Portfolio Star /-->
-  <section id="work" class="portfolio-mf sect-pt4 route">
+  <!-- <section id="work" class="portfolio-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -492,7 +511,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Section Portfolio End /-->
 
   <footer>
