--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#service">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Work</a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Blog</a>
           </li> -->
