--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                       <p><span class="title-s">Name: </span> <span>Diana Marusic</span></p>
                       <!-- <p><span class="title-s">Profile: </span> <span>ML/AI Engineer, Web Developer, Visionary</span></p> -->
                       <p><span class="title-s">Email: </span> <span>marusicdiana@gmail.com</span></p>
+                      <p><span class="title-s">Github: </span> <span><a href="https://github.com/mdiannna">https://github.com/mdiannna</a></span></p>
                       <p><span class="title-s">LinkedIn: </span> <span><a href="https://www.linkedin.com/in/diana-marusic-207678305/">https://www.linkedin.com/in/diana-marusic-207678305/</a></span></p>
                     </div>
                   </div>
