--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    ML/AI Engineer, AI Expert, Web Developer, Innovator, Visionary. Making the world a better place through applying technologies for a positive impact.
+                    ML Engineer, AI Expert, Web Developer, Innovator, Visionary. Making the world a better place through applying technologies for a positive impact.
                   </p>
                   <p class="lead">
                     I am passionate about using technology to create a better world, specializing in developing innovative AI solutions that tackle real-world challenges. Guided by strong personal values and a deep enthusiasm for my work, I prioritize continuous improvement and effective communication.
