--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
       </button>
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll active" href="#home">Home</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#service">Services</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Work</a>
-          </li> -->
+          </li> 
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Blog</a>
           </li> -->
@@ -70,20 +70,23 @@
   </nav>
   <!--/ Nav End /-->
 
+  <div id="home" style="height: 85px; background-color: #030627">
+    <div></div>
+    </div>
+
+
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/img_fluture_digital.jpg)">
+  <!-- <div id="home" class="intro route bg-image" style="background-image: url(img/img_fluture_digital.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Diana Marusic</h1>
           <p class="intro-subtitle"><span class="text-slider-items">ML/AI Engineer, AI Expert, Web Developer, Innovator, Visionary</span><strong class="text-slider"></strong></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!--/ Intro Skew End /-->
 
   <section id="about" class="about-mf sect-pt4 route">
@@ -110,7 +113,7 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skills</p>
+                  <p class="title-s">Main Skills</p>
                   <span>Machine Learning</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -119,17 +122,13 @@
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span>Deep Learning</span> <span class="pull-right">70%</span>
+                  <!-- <span>Deep Learning</span> <span class="pull-right">70%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  </div> -->
                   <span>Data Analysis</span> <span class="pull-right">70%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>Computer Vision</span> <span class="pull-right">60%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <span>NLP</span> <span class="pull-right">75%</span>
                   <div class="progress">
@@ -139,14 +138,18 @@
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
+                  <span>Computer Vision</span> <span class="pull-right">60%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
                   <span>Web Development</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span>Project Management</span> <span class="pull-right">50%</span>
+                  <!-- <span>Project Management</span> <span class="pull-right">50%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                  </div> -->
                   <span>Public Speaking / Storytelling</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -161,7 +164,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    ML Engineer, AI Expert, Web Developer, Innovator, Visionary. Making the world a better place through applying technologies for a positive impact.
+                    Machine Learning Engineer. Making the world a better place through applying technologies for a positive impact.
                   </p>
                   <p class="lead">
                     I am passionate about using technology to create a better world, specializing in developing innovative AI solutions that tackle real-world challenges. Guided by strong personal values and a deep enthusiasm for my work, I prioritize continuous improvement and effective communication.
@@ -349,7 +352,7 @@
 
 
   <!--/ Section Portfolio Star /-->
-  <!-- <section id="work" class="portfolio-mf sect-pt4 route">
+   <section id="work" class="portfolio-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -358,7 +361,7 @@
               Portfolio
             </h3>
             <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Some projects that I am proud of
             </p>
             <div class="line-mf"></div>
           </div>
@@ -367,16 +370,16 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+            <a href="img/fashionAI.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-1.jpg" alt="" class="img-fluid">
+                <img src="img/fashionAI.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">FashionAI</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">AI/ML</span> / <span class="w-date">Feb - April 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -391,16 +394,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
+            <a href="img/exoskeleton_RL.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
+                <img src="img/exoskeleton_RL.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
+                    <h2 class="w-title">ExoscheletionRLSimulation</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">ML/RL</span> / <span class="w-date">July - Aug 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -415,16 +418,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+            <a href="img/DivideImproveTSP.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
+                <img src="img/DivideImproveTSP.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">Optimizing TSP solutions with RL</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">ML/RL</span> / <span class="w-date">Jan 2022 - Sep 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -439,16 +442,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
+            <a href="img/AISimilarPosts.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
+                <img src="img/AISimilarPosts.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">AI system for recommending similar lost and found pet posts</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">ML/Web dev</span> / <span class="w-date">Feb 2022 - Jun 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -463,16 +466,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-5.jpg" data-lightbox="gallery-mf">
+            <a href="img/TaskPlanner.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-5.jpg" alt="" class="img-fluid">
+                <img src="img/TaskPlanner.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">Task Planner</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web dev</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -487,16 +490,16 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="img/YourLifeInFocus.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-6.jpg" alt="" class="img-fluid">
+                <img src="img/YourLifeInFocus.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
+                    <h2 class="w-title">Your Life In Focus</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">AI/Web dev</span> / <span class="w-date">May 2024-present</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -511,8 +514,15 @@
         </div>
         
       </div>
+      <div class="row">
+                <div class="col-sm-12">
+
+        <span class="subtitle-a text-center" style="text-align: right;">
+          See more projects on <a href="https://github.com/mdiannna">https://github.com/mdiannna</a>
+        </span>
+      </div>
     </div>
-  </section> -->
+  </section> 
   <!--/ Section Portfolio End /-->
 
   <footer>
