--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               Portfolio
             </h3>
             <p class="subtitle-a">
-              Some projects that I am proud of
+              Some open source projects that I am proud of
             </p>
             <div class="line-mf"></div>
           </div>
