reformated index page, added skills section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Services</a>
-          </li>-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#skills">Skills</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Work</a>
           </li> 
@@ -95,24 +95,22 @@
         <div class="col-sm-12">
           <div class="box-shadow-full">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <div class="row">
-                  <div class="col-sm-6 col-md-5">
+                  <div class="col-sm-12 col-md-12">
                     <div class="about-img">
                       <img src="img/Diana_Marusic.png" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
-                  </div>
-                  <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Diana Marusic</span></p>
+                      <!-- <p><span class="title-s">Name: </span> <span>Diana Marusic</span></p> -->
                       <!-- <p><span class="title-s">Profile: </span> <span>ML/AI Engineer, Web Developer, Visionary</span></p> -->
                       <p><span class="title-s">Email: </span> <span>marusicdiana@gmail.com</span></p>
                       <p><span class="title-s">Github: </span> <span><a href="https://github.com/mdiannna">https://github.com/mdiannna</a></span></p>
-                      <p><span class="title-s">LinkedIn: </span> <span><a href="https://www.linkedin.com/in/diana-marusic-207678305/">https://www.linkedin.com/in/diana-marusic-207678305/</a></span></p>
+                      <p><span class="title-s">LinkedIn: </span> <span><a href="https://www.linkedin.com/in/diana-marusic/">https://www.linkedin.com/in/diana-marusic/</a></span></p>
                     </div>
                   </div>
                 </div>
-                <div class="skill-mf">
+                <!-- <div class="skill-mf">
                   <p class="title-s">Main Skills</p>
                   <span>Machine Learning</span> <span class="pull-right">85%</span>
                   <div class="progress">
@@ -122,10 +120,6 @@
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <!-- <span>Deep Learning</span> <span class="pull-right">70%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div> -->
                   <span>Data Analysis</span> <span class="pull-right">70%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -146,26 +140,24 @@
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <!-- <span>Project Management</span> <span class="pull-right">50%</span>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div> -->
                   <span>Public Speaking / Storytelling</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                </div>
+                </div> -->
               </div>
-              <div class="col-md-6">
+              <div class="col-md-8">
                 <div class="about-me pt-4 pt-md-0">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
+                  <div class="title-box-2 text-center">
+                    <h1 class="">
+                      Diana MARUSIC
+                    </h1><h5 class="pt-5">
                       About me
                     </h5>
                   </div>
-                  <p class="lead">
+                  <!-- <p class="lead">
                     Machine Learning Engineer. Making the world a better place through applying technologies for a positive impact.
-                  </p>
+                  </p> -->
                   <p class="lead">
                     I am passionate about using technology to create a better world, specializing in developing innovative AI solutions that tackle real-world challenges. Guided by strong personal values and a deep enthusiasm for my work, I prioritize continuous improvement and effective communication.
                   </p>
@@ -183,19 +175,18 @@
   </section>
 
 
-
   <!--/ TODO: Section Services Star /-->
-  <!-- <section id="service" class="services-mf route">
+   <section id="skills" class="services-mf route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Services
+              Skills
             </h3>
-            <p class="subtitle-a">
+            <!-- <p class="subtitle-a">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </p>
+            </p> -->
             <div class="line-mf"></div>
           </div>
         </div>
@@ -204,14 +195,25 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="ion-stats-bars"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Design</h2>
+              <h2 class="s-title">Machine Learning</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                From classical to advanced machine learning models, using frameworks like PyTorch, Tensorflow, Keras.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-ios-browsers"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">LLMs</h2>
+              <p class="s-description text-center">
+                Fine-tuning custom models on specialized hardware, using HuggingFace transformers. Prompt engineering.
               </p>
             </div>
           </div>
@@ -224,9 +226,7 @@
             <div class="service-content">
               <h2 class="s-title">Web Development</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+               Backend: Python, FastAPI, Django. Frontend: Vue.js, Bootstrap.
               </p>
             </div>
           </div>
@@ -234,44 +234,12 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
+              <span class="ico-circle"><i class="ion-ios-monitor-outline"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Photography</h2>
+              <h2 class="s-title">Linux</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Responsive Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Graphic Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Ubuntu user for more than 10 years. Developing custom software
               </p>
             </div>
           </div>
@@ -282,18 +250,68 @@
               <span class="ico-circle"><i class="ion-stats-bars"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Marketing Services</h2>
+              <h2 class="s-title">Data Analytics</h2>
               <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
+                Spark, Hadoop, ElasticSearch
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Databases</h2>
+              <p class="s-description text-center">
+                MongoDB, SQL, PostgreSQL, MySQL.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-code-working"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Programming</h2>
+              <p class="s-description text-center">
+               Using various programming languages, from Python to C, C++, R and JavaScript. 
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-ios-game-controller-a"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Containerized applications</h2>
+              <p class="s-description text-center">
+                Using Docker and Docker Compose
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-social-github"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Github</h2>
+              <p class="s-description text-center">
+               Using Git for version control, including branching, merging, and resolving conflicts.
               </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section> -->
+  </section> 
   <!--/ Section Services End /-->
 
   <!-- Section about projects, awards etc - looks nice, should add TODO -->
