--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+              <span class="ico-circle"><i class="ion-ios-browsers"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Databases</h2>
