updated index page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     I am passionate about using technology to create a better world, specializing in developing innovative AI solutions that tackle real-world challenges. Guided by strong personal values and a deep enthusiasm for my work, I prioritize continuous improvement and effective communication.
                   </p>
                   <p class="lead">
-                    Grounded in a belief that technology should serve humanity with integrity and foresight, I am dedicated to shaping a future where AI not only advances technological frontiers but also improve people's lives and our planet's well-being. I thrive in dynamic environments where innovation meets social responsibility, driving forward initiatives that embody both technical excellence and leadership.
+                    Grounded in a belief that technology should serve humanity with integrity and foresight, I am dedicated to shaping a future where AI not only advances technological frontiers but also improve people's lives and our planet's well-being. I thrive in dynamic environments where innovation meets responsibility, driving forward initiatives that embody both technical excellence and leadership.
                   </p>
                   
                 </div>
