fixed typos, slightly improved description on main page and added new resume

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
                     Machine Learning Engineer. Making the world a better place through applying technologies for a positive impact.
                   </p> -->
                   <p class="lead">
-                    I am a passionate Machine Learning Engineer with Web Development experiene, dedicated to using technology to create a meaningful impact and shape a better world. Specializing in developing innovative AI solutions that tackle real-world challenges, I am proficient in Python, TensorFlow, PyTorch, and HuggingFace, with expertise in LLMs, SLMs, Generative AI, Neural Networks, deep learning, and explainable AI.
+                    I am a passionate Machine Learning Engineer with extensive Web Development experience, dedicated to using technology to create a meaningful impact and shape a better world. Specializing in developing innovative AI solutions that tackle real-world challenges, I am proficient in Python, TensorFlow, PyTorch, and HuggingFace, with expertise in LLMs, SLMs, Generative AI, Neural Networks, deep learning, and Explainable AI.
                     </p>
                   <p class="lead">
-                    Fueled by curiosity and adaptability, I focus on continuous improvement and excel as a collaborative team player, ensuring effective communication and high-quality work. Grounded in the belief that technology should serve humanity with integrity and foresight, I am committed to shaping a future where AI not only advances technological frontiers but also improves people's lives and our planet's well-being. I thrive in dynamic environments where innovation meets responsibility, driving forward initiatives that embody both technical excellence and leadership.
+                    Fueled by curiosity and being highly adaptabile to new environments, I focus on continuous improvement and excel as a collaborative team player, ensuring effective communication and delivering high-quality work. Grounded in the belief that technology should serve humanity with integrity and foresight, I am committed to shaping a future where AI not only advances technological frontiers but also improves people's lives and our planet's well-being. I thrive in dynamic environments where innovation meets responsibility, driving forward initiatives that embody both technical excellence and leadership.
                   </p>
                   
                   <div class="about-info">
@@ -207,8 +207,8 @@
                     <p><span class="title-s">Email: </span> <span>marusicdiana@gmail.com</span></p>
                     <p><span class="title-s">Github: </span> <span><a href="https://github.com/mdiannna">https://github.com/mdiannna</a></span></p>
                     <p><span class="title-s">LinkedIn: </span> <span><a href="https://www.linkedin.com/in/diana-marusic/">https://www.linkedin.com/in/diana-marusic/</a></span></p>
-                    <p><span class="title-s">CV: </span> <span><a href="assets/Diana_MARUSIC_CV.pdf" target="_blank" download="Diana_MARUSIC_CV.pdf">
-                      Download My CV
+                    <p><span class="title-s">Resume: </span> <span><a href="assets/Diana_Marusic_resume.pdf" target="_blank" download="Diana_Marusic_resume.pdf">
+                      Download my resume
                   </a></span></p>
                   </div>
                 </div>
