removed the download my resume link

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <p><span class="title-s">Github: </span> <span><a href="https://github.com/mdiannna">https://github.com/mdiannna</a></span></p>
                     <p><span class="title-s">LinkedIn: </span> <span><a href="https://www.linkedin.com/in/diana-marusic/">https://www.linkedin.com/in/diana-marusic/</a></span></p>
                     <!-- <p><span class="title-s">Resume: </span> <span><a href="assets/Diana Marusic_Resume_final.pdf" target="_blank" download="Diana Marusic Resume.pdf"> -->
-                      Download my resume
+                      <!-- Download my resume -->
                   </a></span></p>
                   </div>
                 </div>
